Following issues resolved on 4 Dec 2025 1. RAD-6237: Android[Prod]>Article(text content)>Incorrect Header Text in Article Section — “You May Also Like” Instead of “Recommended For You” 2. RAD-6234: Android[Prod]>Home>Video content>Incorrect Text Case and Font for “Recommended For You” on Home Video Content 3. RAD-6226: Android[Prod]>Free trial ended popup>Incorrect CTA Text on Free Trial Ended Popup 4. RAD-6247: Android[Prod]>Settings>App Settings>Account Privacy>Account Privacy Flow Navigates Incorrectly When Selecting Any Option Other Than “Other Reasons” 5. RAD-6248: Android[Prod]>Settings>App Settings>Account Privacy>“Other Reasons” Option Redirects to Login Screen Instead of Privacy Policy Screen 6. RAD-6250: Android[Prod]>SleepRight>sleep sounds>Android[Prod]>SleepRight>sleep sounds>My playlist screen "sleep" header font is not merriweather

--- a/app/src/main/res/layout/activity_mind_audit_result.xml
+++ b/app/src/main/res/layout/activity_mind_audit_result.xml
@@ -914,7 +914,7 @@ While you do that here are some suggestion to help you in your journey."
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
+                    android:fontFamily="@font/dmsans_bold"
                     android:padding="16dp"
                     android:text="Recommended For You"
                     android:textColor="@android:color/black"
