--- a/app/src/main/res/layout/activity_articledetail.xml
+++ b/app/src/main/res/layout/activity_articledetail.xml
@@ -353,9 +353,9 @@
                             android:id="@+id/txtAlsolikeHeader"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/merriweather_bold"
+                            android:fontFamily="@font/dmsans_bold"
                             android:padding="16dp"
-                            android:text="You May Also Like"
+                            android:text="Recommended For You"
                             android:textColor="@color/text_color_app"
                             android:textSize="16sp"
                             android:layout_alignParentStart="true" />
