--- a/app/src/main/res/layout/activity_content_details.xml
+++ b/app/src/main/res/layout/activity_content_details.xml
@@ -276,9 +276,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
+                    android:fontFamily="@font/dmsans_bold"
                     android:padding="16dp"
-                    android:text="Recommended for you"
+                    android:text="Recommended For You"
                     android:textColor="@color/text_color_app"
                     android:textSize="16sp"
                     android:layout_alignParentStart="true" />
