--- a/app/src/main/res/layout/activity_mind_audit_dass21_result.xml
+++ b/app/src/main/res/layout/activity_mind_audit_dass21_result.xml
@@ -573,9 +573,9 @@ While you do that here are some suggestion to help you in your journey."
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
+                    android:fontFamily="@font/dmsans_bold"
                     android:padding="16dp"
-                    android:text="You May Also Like"
+                    android:text="Recommended For You"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:layout_alignParentStart="true" />
