--- a/app/src/main/res/layout/item_search_layout_ai.xml
+++ b/app/src/main/res/layout/item_search_layout_ai.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="3dp">
 
     <ImageView
         android:id="@+id/iconUrl"
@@ -32,7 +32,7 @@
     <ImageView
         android:id="@+id/imageRightArrow"
         android:layout_width="7dp"
-        android:layout_height="12dp"
+        android:layout_height="14dp"
         android:src="@drawable/forward_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,10 +40,10 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/border_line"
-        android:layout_marginTop="3dp"
-        android:visibility="gone"
+        android:layout_height="1dp"
+        android:background="#C5DEF9"
+        android:layout_marginTop="12dp"
+        android:visibility="visible"
         app:layout_constraintTop_toBottomOf="@+id/textTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
