--- a/app/src/main/res/layout/activity_sleep_sound_player.xml
+++ b/app/src/main/res/layout/activity_sleep_sound_player.xml
@@ -205,11 +205,25 @@
             android:src="@drawable/ic_prev_player" />
 
         <ImageView
+            android:id="@+id/prev10secButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:src="@drawable/icon_10_sec" />
+
+        <ImageView
             android:id="@+id/playPauseButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="8dp"
             android:src="@drawable/ic_play_player" />
+
+        <ImageView
+            android:id="@+id/next10secButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:src="@drawable/icon_10_sec" />
 
         <ImageView
             android:id="@+id/nextButton"
