--- a/app/src/main/res/layout/activity_subscription_plan_list.xml
+++ b/app/src/main/res/layout/activity_subscription_plan_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/settings_bg_color"
@@ -8,6 +8,7 @@
 
     <!-- Back Arrow and Title -->
     <LinearLayout
+        android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -36,50 +37,48 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/info_affirmation"
-            android:visibility="visible"/>
+            android:visibility="visible" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/plansRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/headerLayout"
+        android:layout_above="@id/bottomLayout"
+        android:layout_marginBottom="8dp" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
         android:paddingVertical="16dp">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/continueButton"
+            android:text="Switch Plan"
+            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="50dp"
+            android:backgroundTint="@color/menuselected"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentBottom="true">
+            android:visibility="gone"
+            android:fontFamily="@font/dmsans_regular" />
 
-            <Button
-                android:id="@+id/continueButton"
-                android:text="Switch Plan"
-                android:layout_marginTop="12dp"
-                android:layout_marginHorizontal="50dp"
-                android:backgroundTint="@color/menuselected"
-                android:textColor="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:fontFamily="@font/dmsans_regular" />
+        <Button
+            android:id="@+id/cancelButton"
+            android:text="Cancel Subscription"
+            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="50dp"
+            android:backgroundTint="@color/menuselected"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:fontFamily="@font/dmsans_regular" />
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/cancelButton"
-                android:text="Cancel Subscription"
-                android:layout_marginTop="12dp"
-                android:layout_marginHorizontal="50dp"
-                android:backgroundTint="@color/menuselected"
-                android:textColor="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:fontFamily="@font/dmsans_regular" />
-        </LinearLayout>
-
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
