--- a/app/src/main/res/layout/activity_mobile_login.xml
+++ b/app/src/main/res/layout/activity_mobile_login.xml
@@ -98,7 +98,7 @@
 
                 <EditText
                     android:id="@+id/etPhone"
-                    android:hint="Enter Your Mobile Number Here"
+                    android:hint="Enter Your Mobile Number "
                     android:inputType="number"
                     android:maxLength="10"
                     android:textSize="18sp"
