Fixes payment gateway and login UI
- Updates payment gateway to "googlePlay" from "razorpay" in SubscriptionCheckoutActivity.
- Modifies MobileLoginActivity:
    - Increases OTP resend timer from 30 to 60 seconds.
    - Adjusts UI elements for the resend timer and OTP verification button.
    - Clears email value when creating a new user.
- Updates Razorpay test key and adds a "Change" string resource.
- Refines layout spacing and styles in the login and image slider screens.
and Below Issues Fixed
RAD - 6355
RAD - 6361
6366
6365
6363
6360
6339
6340
6341
6342

--- a/app/src/main/res/layout/activity_image_slider.xml
+++ b/app/src/main/res/layout/activity_image_slider.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/viewPager_image_slider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="10dp" />
 
             <!-- TabLayout for dots -->
             <com.google.android.material.tabs.TabLayout
@@ -68,7 +68,7 @@
                 android:drawablePadding="8dp"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/margin_card_16dp"
                 android:background="@drawable/bg_google_btn" />
             <TextView
                 android:id="@+id/btn_google"
@@ -83,7 +83,7 @@
                 android:drawablePadding="8dp"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/margin_card_16dp"
                 android:background="@drawable/bg_google_btn" />
 
 
