--- a/app/src/main/res/layout/activity_image_slider.xml
+++ b/app/src/main/res/layout/activity_image_slider.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
 
         <LinearLayout
@@ -83,7 +83,7 @@
                 android:drawablePadding="8dp"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
-                android:layout_marginTop="@dimen/margin_card_16dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/bg_google_btn" />
 
 
@@ -108,4 +108,4 @@
             android:textColor="#808080"
             android:layout_marginBottom="16dp" />
     </RelativeLayout>
-</ScrollView>
+</LinearLayout>
