--- a/app/src/main/res/layout/activity_mobile_login.xml
+++ b/app/src/main/res/layout/activity_mobile_login.xml
@@ -63,7 +63,7 @@
                 android:text="Enter a valid phone number."
                 android:layout_marginTop="6dp"
                 android:textSize="@dimen/textsize_medium"
-                android:textColor="#FD6967"
+                android:textColor="@color/light_orange"
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/dmsans_medium"
                 android:layout_gravity="center_horizontal"
@@ -98,7 +98,7 @@
 
                 <EditText
                     android:id="@+id/etPhone"
-                    android:hint="Enter Your Mobile Number "
+                    android:hint="Enter your mobile number here"
                     android:inputType="number"
                     android:maxLength="10"
                     android:textSize="18sp"
@@ -126,12 +126,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:layout_marginTop="20dp"
-
                 android:text="Get OTP"
                 android:textSize="16sp"
                 android:fontFamily="@font/dmsans_bold"
                 android:textColor="@color/white"
-                android:backgroundTint="@color/menuselected" />
+                android:backgroundTint="@color/rightlife" />
 
 
         </LinearLayout>
@@ -250,10 +249,24 @@
             <TextView
                 android:id="@+id/tvOtpError"
                 android:text="Incorrect OTP"
-                android:textColor="@color/red"
+                android:textColor="@color/light_orange"
+                android:visibility="visible"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/dmsans_regular"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tvOtpSent"
+                android:text="OTP Sent"
+                android:textColor="@color/txt_color_header"
                 android:visibility="visible"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="6dp"
+                android:fontFamily="@font/dmsans_regular"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -268,7 +281,7 @@
                 android:textSize="16sp"
                 android:fontFamily="@font/dmsans_bold"
                 android:textColor="@color/white"
-                android:backgroundTint="@color/menuselected" />
+                android:backgroundTint="@color/rightlife" />
 
             <!-- Resend Timer -->
             <TextView
