Issues Resolved on 16 De 2025 1. RAD-6166: Alignment issue between “Your Saved Items” title and category dropdown 2. RAD-6167: No Items Available text inconsistent between iOS and Android 3. RAD-6179: [android][production]Incorrect Headings Displayed on “Follow Your Curiosity” Screen 4. RAD-6398: Android[QA]>Profile – Verified phone number shows text instead of green tick icon 5. RAD-6399: Android[QA]> facescan result> Diastolic BP icon is not as per design 6. RAD-6402: Incorrect subtext copy displayed on Home screen 7. RAD-6405: Incomplete text displayed under Your Wellness Playlist section 8. RAD-6406: Incorrect card placement under MoveRight Explore More section 9. RAD-6408: Incorrect card placement under EatRight Explore More section 10. RAD-6448: Android[QA]Privacy policy screen>Checkbox alignment not as per design 11. RAD-6451: Android[QA]>"Ready? Let's get started" screen>"Get OTP" button shape is not as per design 13. RAD-5979: Android[Prod]>Profile name field accepts numbers and special characters (should be restricted like onboarding)

--- a/app/src/main/res/layout/activity_mobile_login.xml
+++ b/app/src/main/res/layout/activity_mobile_login.xml
@@ -33,11 +33,11 @@
             <TextView
                 android:text="Ready? Let’s Get Started"
                 android:textSize="@dimen/textsize_large24sp"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/merriweather_bold"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:text="Enter Your Phone Number"
@@ -130,6 +130,7 @@
                 android:textSize="16sp"
                 android:fontFamily="@font/dmsans_bold"
                 android:textColor="@color/white"
+                android:background="@drawable/bg_rounded_yellow"
                 android:backgroundTint="@color/rightlife" />
 
 
@@ -281,6 +282,7 @@
                 android:textSize="16sp"
                 android:fontFamily="@font/dmsans_bold"
                 android:textColor="@color/white"
+                android:background="@drawable/bg_rounded_yellow"
                 android:backgroundTint="@color/rightlife" />
 
             <!-- Resend Timer -->
