--- a/app/src/main/res/layout/activity_data_control.xml
+++ b/app/src/main/res/layout/activity_data_control.xml
@@ -136,7 +136,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:buttonTint="@color/checkbox_color"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="6dp"/>
 
         <!-- TextView -->
         <TextView
@@ -163,7 +164,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:buttonTint="@color/checkbox_color"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="6dp"/>
 
         <!-- TextView -->
         <TextView
