--- a/app/src/main/res/layout/activity_saved_item_list.xml
+++ b/app/src/main/res/layout/activity_saved_item_list.xml
@@ -8,28 +8,27 @@
     android:background="@color/white">
 
     <!-- Back Arrow and Title -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
         android:paddingBottom="16dp">
 
         <ImageView
             android:id="@+id/icon_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_back" />
+            android:src="@drawable/icon_back"
+            android:layout_centerVertical="true"/>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Your Saved Items"
             android:textSize="18sp"
             android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
-            android:gravity="center" />
-    </LinearLayout>
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 
 
     <RelativeLayout
@@ -70,7 +69,7 @@
             android:id="@+id/tvNoData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Data Available"
+            android:text="No items available"
             android:gravity="center"
             android:fontFamily="@font/dmsans_bold"
             android:textSize="@dimen/textsize_large18sp"
