feat: Apply UI updates and enable Firebase debug mode
This commit introduces several changes:
- Sets a custom font (`dmsans_semibold`) for chips in `UserInterestActivity`.
- Enables Firebase Analytics debug mode for debug builds in `MainApplication`.
- Updates the layout for the age selection bottom sheet to `wrap_content`.
- Adjusts UI elements in the overthinking and healthcam screens.
- Clears the default email text in the user profile.
- Ensures the age selection bottom sheet is fully expanded on show.
- Prevents displaying "0 years" or null for age and gender in health cam details.
6438 -
6414 -
6413 -
6397 -
6461 -

--- a/app/src/main/res/layout/activity_healthcam_basic_details_new.xml
+++ b/app/src/main/res/layout/activity_healthcam_basic_details_new.xml
@@ -222,7 +222,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dmsans_bold"
                 android:layout_marginTop="16dp"
-                android:text="Do You Smoke?"
+                android:text="Do you smoke or use tobacco?"
                 android:textSize="@dimen/textsize_medium"
                 android:drawableEnd="@drawable/astric" />
 
