--- a/app/src/main/res/layout/custom_toast_new.xml
+++ b/app/src/main/res/layout/custom_toast_new.xml
@@ -29,6 +29,7 @@
             android:text="Reminders Set"
             android:textColor="#000000"
             android:textSize="@dimen/textsize_medium"
+            android:fontFamily="@font/dmsans_bold"
             android:textStyle="bold" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
