--- a/app/src/main/res/layout/row_service_pane_even.xml
+++ b/app/src/main/res/layout/row_service_pane_even.xml
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_healthcam_logo" />
 
     <TextView
