--- a/app/src/main/res/layout/item_tools.xml
+++ b/app/src/main/res/layout/item_tools.xml
@@ -16,6 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:id="@+id/new_main_linear_layout"
         android:orientation="vertical">
 
         <TextView
