--- a/app/src/main/res/drawable/bg_subscription_plan_selected.xml
+++ b/app/src/main/res/drawable/bg_subscription_plan_selected.xml
@@ -11,7 +11,7 @@
     <!-- Light Border to Simulate Elevation -->
     <stroke
         android:width="1dp"
-        android:color="#22000000" /> <!-- very light shadow -->
+        android:color="@color/menuselected" /> <!-- very light shadow -->
 
     <!-- Optional: subtle inner shadow using padding -->
     <padding
