--- a/app/src/main/res/layout/activity_subscription_checkout.xml
+++ b/app/src/main/res/layout/activity_subscription_checkout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -38,7 +38,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_below="@id/headerLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,7 +83,7 @@
 
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
                             android:layout_marginHorizontal="8dp">
 
@@ -187,6 +188,7 @@
 
                 <!-- RelativeLayout to position the star icon and dialog content -->
                 <RelativeLayout
+                    android:id="@+id/rlRazorPay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_subscription_plan"
@@ -201,9 +203,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Recommended"
-                        android:background="@drawable/roundedcornershape"
+                        android:background="@drawable/rounded_bg"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="-16dp"
+                        android:layout_marginTop="-21dp"
                         android:adjustViewBounds="true"
                         android:textColor="@color/white"
                         android:paddingHorizontal="16dp"
@@ -214,8 +216,7 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="12dp">
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:id="@+id/llHeader"
@@ -262,7 +263,7 @@
                             android:orientation="horizontal"
                             android:layout_below="@id/llHeader"
                             android:layout_marginTop="12dp"
-                            android:layout_marginStart="50dp"/>
+                            android:layout_marginStart="50dp" />
 
                         <!-- Divider -->
                         <View
@@ -288,65 +289,82 @@
             </FrameLayout>
 
             <!-- ===================== CARD 2 (Google Play) ====================== -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardViewInAppPurchase"
+
+            <LinearLayout
+                android:id="@+id/llGooglePlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
-                app:cardElevation="3dp"
-                app:cardCornerRadius="12dp"
-                android:layout_marginTop="16dp">
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_subscription_plan"
+                android:foreground="?attr/selectableItemBackground">
+
+                <!-- Google Play Icon -->
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:padding="2dp"
+                    android:src="@drawable/playstore" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="12dp">
+                    android:orientation="vertical"
+                    android:layout_marginStart="10dp">
 
-                    <!-- Google Play Icon -->
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/logo_rightlife" />
-
-                    <LinearLayout
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginStart="10dp">
+                        android:text="Google Play"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textColor="@color/txt_color_mind" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Google Play"
-                            android:textSize="18sp"
-                            android:fontFamily="@font/dmsans_bold"
-                            android:textColor="@color/txt_color_mind" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Managed by Google"
+                        android:textSize="12sp"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:textColor="@color/txt_color_mind" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Managed by Google"
-                            android:textSize="12sp"
-                            android:fontFamily="@font/dmsans_regular"
-                            android:textColor="@color/txt_color_mind" />
-
-                        <LinearLayout
-                            android:id="@+id/llIconsGooglePlay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_below="@id/llHeader"
-                            android:layout_marginTop="12dp" />
-
-                    </LinearLayout>
-
+                    <LinearLayout
+                        android:id="@+id/llIconsGooglePlay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_below="@id/llHeader"
+                        android:layout_marginTop="12dp" />
 
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/bottomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:paddingVertical="8dp">
+
+        <Button
+            android:id="@+id/btnContinue"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:text="Continue"
+            android:textSize="16sp"
+            android:fontFamily="@font/dmsans_bold"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_search_box"
+            android:backgroundTint="@color/rightlife" />
+
+    </LinearLayout>
+
+</RelativeLayout>
