--- a/app/src/main/res/layout/activity_subscription_plan_list.xml
+++ b/app/src/main/res/layout/activity_subscription_plan_list.xml
@@ -54,19 +54,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:paddingVertical="16dp">
+        android:paddingVertical="8dp">
 
         <Button
             android:id="@+id/continueButton"
-            android:text="Switch Plan"
+            android:text="Restore Subscription"
             android:layout_marginTop="12dp"
-            android:layout_marginHorizontal="50dp"
-            android:backgroundTint="@color/menuselected"
-            android:textColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:fontFamily="@font/dmsans_regular" />
+            android:layout_height="48dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/dmsans_bold"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_rounded_yellow"
+            android:backgroundTint="@color/menuselected"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/cancelButton"
@@ -79,6 +80,32 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:fontFamily="@font/dmsans_regular" />
+
+        <!-- Footer Links -->
+        <LinearLayout
+            android:id="@+id/llFooterLinks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_terms_condition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Terms of Service"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray"
+                android:paddingEnd="16dp" />
+
+            <TextView
+                android:id="@+id/tvPrivacyPolicy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Privacy Policy"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
