--- a/app/src/main/res/layout/bottomsheet_plan_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_plan_selection.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="20dp">
 
         <TextView
+            android:id="@+id/tvHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Choose A Plan"
