--- a/app/src/main/res/layout/row_plan_selection.xml
+++ b/app/src/main/res/layout/row_plan_selection.xml
@@ -9,6 +9,7 @@
 
     <!-- RelativeLayout to position the star icon and dialog content -->
     <RelativeLayout
+        android:id="@+id/rlMainLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_subscription_plan"
@@ -23,9 +24,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Best Value"
-            android:background="@drawable/roundedcornershape"
+            android:background="@drawable/rounded_bg"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="-16dp"
+            android:layout_marginTop="-22dp"
             android:adjustViewBounds="true"
             android:textColor="@color/white"
             android:paddingHorizontal="16dp"
@@ -36,8 +37,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/llHeaderLayout"
@@ -51,15 +51,31 @@
                     android:layout_height="52dp"
                     android:src="@drawable/logo_rightlife" />
 
-                <TextView
-                    android:id="@+id/planTitle"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Monthly"
-                    android:layout_marginHorizontal="8dp"
-                    android:fontFamily="@font/dmsans_bold"
-                    android:textColor="@color/txt_color_mind"
-                    android:textSize="16sp" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="8dp">
+
+                    <TextView
+                        android:id="@+id/planTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Monthly"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textColor="@color/txt_color_mind"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/tvCancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel anytime online"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:textColor="@color/gray_past_price"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
