Following issues resolved on 19 Dec 2024 1. RAD-6552: Android[QA] > Profile > Purchase Plans > Missing headers and tabs on Purchase Plans screen 2. RAD-6578: Switch account popup UI is not as per design 3. RAD-6617: [Android][QA][Onboarding] Warning Message doesn't comes when user enters invalid Number 4. RAD-6571: Android[QA] > Profile > Purchase Plans > Subscription Plans > Monthly & Yearly > UPI flow > Active status not shown on card after successful payment 5. RAD-6615: Android[QA] > Purchase Plans > Subscription Plans > Checkout screen > Change Plan > Plan name not updating with price 6. RAD-6616: Android[QA] > Purchase Plans > Subscription Plans > Checkout screen > Both success popup and toast displayed after payment 7. RAD-6411: [android][production][plans]Missing Restore Purchases and legal links on Plans screen 8. RAD-6548: Android[QA] > Login with Phone Number > Email field not editable when empty 9. RAD-6599: Android[QA] > Privacy Policy screen > Insufficient spacing between content and checkbox section 10. RAD-6442: Bookmark option visible for series content across modules 11. RAD-6444: ThinkRight Explore More heading alignment incorrect 12. RAD-6445: MoveRight Explore More heading alignment incorrect 13. RAD-6446: EatRight Explore More heading alignment incorrect 14. RAD-6447: The top heading on SleepRight Explore More screen is not aligned according to design specifications. 15. RAD-6447: The top heading on SleepRight Explore More screen is not aligned according to design specifications. 16. RAD-6457: Category tab font is incorrect on SleepRight Explore More screen 17. RAD-6606: Android[QA] > Purchase Plans > Subscription Plans > Privacy Policy navigation opens incorrect screen 18. RAD-6605: Android[QA] > Purchase Plans > Subscription Plans > Incorrect “Terms” text displayed 19. RAD-6604: Android[QA] > Switch Account popup > “Skip” text color not as per design 20. RAD-6603: Android[QA] > Purchase Plans > Subscription Plans > Insufficient spacing betwee

--- a/app/src/main/res/layout/activity_new_categorylist.xml
+++ b/app/src/main/res/layout/activity_new_categorylist.xml
@@ -29,7 +29,7 @@
             android:textSize="18sp"
             android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
-            android:gravity="center" />
+            android:gravity="center_vertical" />
     </LinearLayout>
 
     <HorizontalScrollView
