--- a/app/src/main/res/layout/activity_data_control.xml
+++ b/app/src/main/res/layout/activity_data_control.xml
@@ -136,8 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:buttonTint="@color/checkbox_color"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="6dp"/>
+            android:layout_marginEnd="8dp" />
 
         <!-- TextView -->
         <TextView
@@ -164,8 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:buttonTint="@color/checkbox_color"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="6dp"/>
+            android:layout_marginEnd="8dp" />
 
         <!-- TextView -->
         <TextView
