--- a/app/src/main/res/layout/activity_subscription_plan_list.xml
+++ b/app/src/main/res/layout/activity_subscription_plan_list.xml
@@ -87,24 +87,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginTop="8dp">
 
             <TextView
                 android:id="@+id/tv_terms_condition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Terms of Service"
+                android:text="Terms &amp; Conditions"
                 android:textSize="12sp"
-                android:textColor="@android:color/darker_gray"
-                android:paddingEnd="16dp" />
+                android:fontFamily="@font/dmsans_bold"
+                android:textColor="#707070"
+                android:paddingEnd="16dp"
+                android:layout_marginEnd="24dp" />
 
             <TextView
                 android:id="@+id/tvPrivacyPolicy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Privacy Policy"
+                android:fontFamily="@font/dmsans_bold"
                 android:textSize="12sp"
-                android:textColor="@android:color/darker_gray" />
+                android:textColor="#707070"
+                android:layout_marginStart="24dp" />
         </LinearLayout>
     </LinearLayout>
 
