--- a/app/src/main/res/layout/row_settings.xml
+++ b/app/src/main/res/layout/row_settings.xml
@@ -14,15 +14,64 @@
         android:gravity="center_vertical"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/settingTitle"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/txt_color_mind"
-            android:fontFamily="@font/dmsans_regular"
-            android:textSize="@dimen/textsize_large"
-            android:text="Title" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/settingTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/txt_color_mind"
+                android:fontFamily="@font/dmsans_regular"
+                android:textSize="@dimen/textsize_large"
+                android:text="Title" />
+
+            <TextView
+                android:id="@+id/tvDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/active_text_color"
+                android:fontFamily="@font/dmsans_regular"
+                android:textSize="12sp"
+                android:text="Title"
+                android:visibility="gone"/>
+
+            <LinearLayout
+                android:id="@+id/llPlansDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="6dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Monthly"
+                    android:fontFamily="@font/dmsans_semibold"
+                    android:textColor="@color/txt_color_header"
+                    android:background="@drawable/bg_light_red_border"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="6dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Annual"
+                    android:fontFamily="@font/dmsans_semibold"
+                    android:textColor="@color/txt_color_header"
+                    android:background="@drawable/bg_light_red_border"
+                    android:layout_marginHorizontal="8dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="6dp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
         <ImageView
             android:layout_width="16dp"
