Following issues resolved on 22 Dec 2025 1. RAD-5087: Android[(QA(123)]ThinkRight>Affirmation>Set your Reminder functionality is not working user is not getting reminder msg 2. RAD-6638: Android[QA]>Checklist>MR+ER>“Calorie & Macro Goals” image is not as per design on MR+ER checklist 3. RAD-5097: Android[(QA(124)]CheckList>Discover your eating & movement style>Do you eat your meals at the same time ecery day screen>User does not receive reminder set on “Do you eat your meals at the same time every day” screen 4. RAD-4923: Android[QA(121)]>Quicklinks>User is able to open face scan, snap meal sleep sount even after Trial expired 5. RAD-5236: [Android][QA][Checklist]7th screen not loading if back pressed from 6th screen during Complete Profile flow 6. RAD-5522: [QA][ANDROID][HOME]Video continues to play in the background after user exits quickly from MoveRight Explore section 7. RAD-5659: [Android][PROD][Purchase Plans Info] Text cut off in second carousel banner 8. RAD-5908: [Android[Production][Home]User name displayed incorrectly on Home screen after entering name during Onboarding 9. RAD-6020: [Android][Production][Mindaudit]User can access Mind Audit via carousel banner after free trial expiration 10. RAD-4499: Android>QA(117)>ThinkRight>Breathing> 4-7-8 Breathing>Practice screen issues 11. RAD-6636: Android[QA] Purchase plan>“RightLife Pro Plans” text and Monthly/Annual tabs missing on purchase Plans screen 12. RAD-6637: Android[QA]Onboarding>name field>Error message shown for Name field without entering any value during onboarding 13. RAD-6639: Android[QA]>Profile>OTP screen>Verify button enabled on OTP screen without entering OTP 14. RAD-6642: [android][qa][otp screen]Failed to send OTP” message persists when navigating back to Get OTP screen 15. RAD-6643: Whole subscription card is tappable instead of only the Buy button on Subscription Plans screen 16. RAD-5984: Android[Prod]>ThinkRight>Journalling>journal calender page>“Add a New Journal Entry” border color 

--- a/app/src/main/res/layout/activity_mrer_assessment_context_screen.xml
+++ b/app/src/main/res/layout/activity_mrer_assessment_context_screen.xml
@@ -43,7 +43,7 @@
                     android:layout_margin="12dp"
                     android:scaleType="centerCrop"
                     android:padding="5dp"
-                    android:src="@drawable/mr_er1" />
+                    android:src="@drawable/mr_er1_new" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
