--- a/app/src/main/res/layout/row_plan_slidder.xml
+++ b/app/src/main/res/layout/row_plan_slidder.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:paddingBottom="24dp">
 
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_slider"
